--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,9 +4,9 @@
     <li><%= check_box_tag('completed', value = "1", checked = task.completed)%>
     <%=link_to task.title, task_path(task)%>
     <%=link_to "🗑", task_path(task),
-  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+  data: {turbo_method: :delete, turbo_confirm: "Delete #{task.title}?"}
 %></li>
   <% end %>
 </ul>
 
-<%= link_to "Add a new task", 'tasks/new' %>
+<%= link_to "Add a new task", tasks_new_path %>
