--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -12,5 +12,7 @@
 
    <%= link_to "Delete",
   task_path(@task),
-  data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}
+  data: {turbo_method: :delete, turbo_confirm: "Delete #{@task.title}?"}
 %>
+
+<%= link_to "Back to list", tasks_path %>
