Add DS_store to .gitignore, partial _form and new/edit views modified, add boostrap

--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @task.title %></h1>
 <p><%= @task.details %></p>
 <p>
-   <%= check_box_tag('completed', value = "1", checked = @task.completed)%>
+   <%#= check_box_tag('completed', value = "1", checked = @task.completed)%>
 <% if @task.completed %>
   <p><%='This task has been completed'%></p>
 <% else%>
