--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,11 +1,14 @@
 <h1>New task</h1>
 
-<%= form_for(@task) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :details %>
-  <%= f.text_field :details %>
-  <%= f.submit %>
-<% end %>
+<%#= form_for(@task) do |f| %>
+  <%#= f.label :title %>
+  <%#= f.text_field :title %>
+  <%#= f.label :details %>
+  <%#= f.text_field :details %>
+  <%#= f.submit %>
+<%# end %>
+
+<%= render 'form', task: @task %>
+<br>
 
 <%= link_to "Back to list", tasks_path %>
