--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -9,4 +9,5 @@
   <% end %>
 </ul>
 
-<%= link_to "Add a new task", tasks_new_path %>
+<%= link_to "Add a new task", tasks_new_path, class: 'btn btn-primary mt-3' %>
+
